[build-system]
requires = ["setuptools", "setuptools_scm", "PyQt5", "PySide6"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
include = ["qtutils", "qtutils.*"]

[project]
name = "qtutils"
description = "PySide6/PyQt5 abstraction layer, mulithreading and UI loader utilities, icon set, and more"
authors = [
    {name = "Philip Starkey", email = "threepineapples@gmail.com"},
    {name = "Chris Billington", email = "chrisjbillington@gmail.com"},
]
keywords = ["Qt", "PyQt", "PySide"]
license = {file = 'LICENSE.txt'}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = ["setuptools_scm"]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/philipstarkey/qtutils"
Documentation = "https://readthedocs.org/projects/qtutils/"
Repository = "https://github.com/philipstarkey/qtutils"
Downloads = "https://pypi.org/project/qtutils/"
Tracker = "https://github.com/philipstarkey/qtutils/issues"

[project.optional-dependencies]
pyqt5 = ["PyQt5"]
pyside6 = ["PySide6"]
docs = [
  "PyQt5",
  "PySide6",
  "importlib_metadata",
  "setuptools_scm",
  "Sphinx==3.0.1",
  "sphinx-rtd-theme==0.4.3",
  "recommonmark==0.6.0",
  "m2r==0.2.1",
]


[tool.setuptools_conda]
conda_name_differences = {PyQt5 = "pyqt"}
channels = ["conda-forge"] # PySide6 is only in conda-forge
ignore_run_exports = ["pyqt", "python_abi"]
