[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "PySide6", "requests"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
include = ["qtutils", "qtutils.*"]

[project]
name = "qtutils"
description = "PySide6/PyQt5 abstraction layer, mulithreading and UI loader utilities, icon set, and more"
authors = [
    {name = "Philip Starkey", email = "threepineapples@gmail.com"},
    {name = "Chris Billington", email = "chrisjbillington@gmail.com"},
]
keywords = ["Qt", "PyQt", "PySide"]
license = "(BSD-2-Clause OR BSD-3-Clause) AND CC-BY-3.0 AND Ubuntu-font-1.0"
license-files = [
    "LICENSE.txt",
    "BSD-2-CLAUSE-LICENSE.txt",
    "BSD-3-CLAUSE-LICENSE.txt",
    "icons/LICENSE.txt",
    "UBUNTU-FONT-LICENSE.txt",
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = ["setuptools_scm>=8"]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/philipstarkey/qtutils"
Documentation = "https://readthedocs.org/projects/qtutils/"
Repository = "https://github.com/philipstarkey/qtutils"
Downloads = "https://pypi.org/project/qtutils/"
Tracker = "https://github.com/philipstarkey/qtutils/issues"

[project.optional-dependencies]
pyqt5 = ["PyQt5"]
pyqt6 = ["PyQt6"]
pyside6 = ["PySide6"]
docs = [
    "PyQt5",
    "PyQt6",
    "PySide6",
    "Sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "recommonmark>=0.7.1",
    "myst-parser",
]


[tool.setuptools_conda]
conda_name_differences = {
    PyQt5 = "pyqt",
    # PyQt6 = "pyqt", # Not even on conda-forge yet, future naming uncertain
}
channels = ["conda-forge"] # PySide6 is only in conda-forge
ignore_run_exports = ["pyqt", "python_abi"]
