[metadata]
name = qtutils
description = Utilities for providing concurrent access to Qt objects, simplified QSettings storage, and dynamic widget promotion when loading UI files, in Python Qt applications. Also includes the Fugue icon set, by Yusuke Kamiyamane'
long_description = file: README.md
long_description_content_type = text/markdown
author = Philip Starkey
author_email = threepineapples@gmail.com
url = https://github.com/philipstarkey/qtutils
license = 2-clause BSD, 3-clause BSD (see LICENSE.TXT for full conditions)
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
  importlib_metadata

[options.extras_require]
pyqt = PyQt5
pyside = PySide2

[dist_conda]
conda_name_differences =
  PyQt5:pyqt

# Build requirement for the PySide2 icons resource file - pyside is only in conda-forge.
channels =
  conda-forge