[metadata]
name = qtutils
description = PySide2/PyQt5 abstraction layer, mulithreading and UI loader utilities, icon set, and more
long_description = file: README.md
long_description_content_type = text/markdown
author = Philip Starkey
author_email = threepineapples@gmail.com
url = https://github.com/philipstarkey/qtutils
license = 2-clause BSD, 3-clause BSD (see LICENSE.TXT for full conditions)
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
  importlib_metadata
  setuptools_scm

[options.extras_require]
pyqt = PyQt5
pyside = PySide2

[dist_conda]
conda_name_differences = PyQt5:pyqt
# For build requirements - PySide2 is only in conda-forge.
channels = conda-forge
ignore_run_exports = 
    pyqt
    # Note: python_abi can be removed once setuptools-conda depends on conda-build >=
    # 3.18.12 (which it will once that version lands in the conda repositories)
    # see https://gitter.im/conda/conda-build?at=5e7251004aec312c1f8ef3c4
    python_abi
